--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </footer>
 
 <script>
-fetch("articles.json")
+fetch("./articles.json")
     .then(response => response.json())
     .then(data => {
         const list = document.getElementById("articles-list");
