--- a/start-here.html
+++ b/start-here.html
@@ -1,57 +1,53 @@
-Start Here
+<body>
 
-If you're renting, rebuilding financially, or just unsure where to begin — you're not behind.
+<header class="sub-hero">
+  <div class="container">
+    <h1>Start Your Journey</h1>
+    <p class="subtitle">
+      This is where your path toward homeownership begins.
+    </p>
+  </div>
+</header>
 
-Nestwell was created for people like us.
-People who want to understand the path to homeownership clearly, calmly, and step by step.
+<main class="content">
 
-There’s no pressure here.
-No hype.
-No unrealistic timelines.
+  <section class="content-section">
+    <h2>Why Nestwell Exists</h2>
+    <p>
+      Most people are never taught how the path to homeownership actually works.
+      Nestwell exists to simplify that path and walk it step by step.
+    </p>
+  </section>
 
-Just steady progress.
+  <section class="content-section">
+    <h2>The 4 Stages</h2>
 
-How Nestwell Works
+    <div class="info-card">
+      <h3>Stage 1 — Rent Smart</h3>
+      <p>Build strong financial and rental habits while protecting yourself.</p>
+    </div>
 
-Everything on this platform is organized into four stages.
-You don’t need to master everything at once.
-You just need to know which stage you're in.
+    <div class="info-card">
+      <h3>Stage 2 — Prepare Financially</h3>
+      <p>Strengthen credit, reduce debt, and build savings.</p>
+    </div>
 
-🟢 Stage 1 — Rent Smart
+    <div class="info-card">
+      <h3>Stage 3 — Buy Smart</h3>
+      <p>Understand the buying process with clarity and confidence.</p>
+    </div>
 
-Before owning a home, we learn how to rent wisely.
-Understanding leases, renters insurance, saving habits, and avoiding common mistakes.
+    <div class="info-card">
+      <h3>Stage 4 — Maintain & Grow</h3>
+      <p>Protect your home and build long-term stability.</p>
+    </div>
 
-[ Explore Rent Smart ]
+  </section>
 
-🔵 Stage 2 — Prepare Financially
+  <div class="back-home">
+    <a href="index.html" class="secondary-button">← Back to Home</a>
+  </div>
 
-This is where we build the foundation.
-Credit scores, debt reduction, down payment planning, and financial stability.
+</main>
 
-[ Explore Prepare Financially ]
-
-🟣 Stage 3 — Buy Smart
-
-When you're ready, we learn how the buying process actually works.
-Mortgages, inspections, offers, closing — explained clearly.
-
-[ Explore Buy Smart ]
-
-🟡 Stage 4 — Maintain & Grow
-
-Owning is just the beginning.
-We learn how to maintain a home and build long-term security.
-
-[ Explore Maintain & Grow ]
-
-A Note From Nestwell
-
-Nestwell is built as a free, community-driven roadmap.
-We're learning together — not pretending to have it all figured out.
-
-If you're starting from zero, rebuilding, or just feeling unsure — you're in the right place.
-
-Take your time.
-Start where you are.
-Move forward steadily.
+</body>
