--- a/start-here.html
+++ b/start-here.html
@@ -1,53 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Start Here | Nestwell</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Start your path toward homeownership with clarity and calm guidance.">
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
 
-<header class="sub-hero">
+<header class="simple-header">
   <div class="container">
     <h1>Start Your Journey</h1>
     <p class="subtitle">
-      This is where your path toward homeownership begins.
+      Homeownership doesn’t begin with buying.
+      It begins with understanding where you are today.
     </p>
   </div>
 </header>
 
-<main class="content">
+<section class="content-section">
+  <div class="container">
 
-  <section class="content-section">
-    <h2>Why Nestwell Exists</h2>
+    <h2>The Nestwell Roadmap</h2>
+
     <p>
-      Most people are never taught how the path to homeownership actually works.
-      Nestwell exists to simplify that path and walk it step by step.
+      Most renters feel overwhelmed because the path to owning a home feels unclear.
+      Nestwell breaks it into simple stages so you always know your next step.
     </p>
-  </section>
 
-  <section class="content-section">
-    <h2>The 4 Stages</h2>
+    <ul class="roadmap-list">
+      <li><strong>Stage 1 — Rent Smart:</strong> Build strong habits and protect your foundation.</li>
+      <li><strong>Stage 2 — Prepare Financially:</strong> Strengthen credit and reduce debt.</li>
+      <li><strong>Stage 3 — Buy Smart:</strong> Understand the buying process with confidence.</li>
+      <li><strong>Stage 4 — Maintain & Grow:</strong> Protect and grow your long-term stability.</li>
+    </ul>
 
-    <div class="info-card">
-      <h3>Stage 1 — Rent Smart</h3>
-      <p>Build strong financial and rental habits while protecting yourself.</p>
+    <div class="cta-wrapper">
+      <a href="rent-smart/index.html" class="cta-button">
+        Begin with Stage 1 →
+      </a>
     </div>
 
-    <div class="info-card">
-      <h3>Stage 2 — Prepare Financially</h3>
-      <p>Strengthen credit, reduce debt, and build savings.</p>
+    <div class="back-home">
+      <a href="index.html">← Back to Home</a>
     </div>
 
-    <div class="info-card">
-      <h3>Stage 3 — Buy Smart</h3>
-      <p>Understand the buying process with clarity and confidence.</p>
-    </div>
-
-    <div class="info-card">
-      <h3>Stage 4 — Maintain & Grow</h3>
-      <p>Protect your home and build long-term stability.</p>
-    </div>
-
-  </section>
-
-  <div class="back-home">
-    <a href="index.html" class="secondary-button">← Back to Home</a>
   </div>
+</section>
 
-</main>
+<footer class="site-footer">
+  <p>© 2026 Nestwell — Learn. Prepare. Own.</p>
+</footer>
 
 </body>
+</html>
