--- a/rent-smart/index.html
+++ b/rent-smart/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Stage 1 — Rent Smart | Nestwell</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../style.css">
+</head>
+
 <body>
 
 <header class="module-hero">
@@ -43,3 +52,4 @@
 </footer>
 
 </body>
+</html>
