--- a/rent-smart/index.html
+++ b/rent-smart/index.html
@@ -23,10 +23,10 @@
   <aside class="module-sidebar">
     <h3>Stage 1 Modules</h3>
     <ul>
-      <li>Lease Basics</li>
-      <li>Protect Your Deposit</li>
-      <li>Budgeting While Renting</li>
-      <li>Renter’s Insurance</li>
+      <li><a href="lease-basics.html">Lease Basics</a></li>
+      <li><a href="lease-basics.html">protect deposit</a></li>
+      <li><a href="lease-basics.html">budgeting</a></li>
+      <li><a href="lease-basics.html">renters insurance</a></li>
     </ul>
 
     <a href="../index.html" class="back-link">← Back to Home</a>
