--- a/rent-smart/index.html
+++ b/rent-smart/index.html
@@ -24,9 +24,9 @@
     <h3>Stage 1 Modules</h3>
     <ul>
       <li><a href="lease-basics.html">Lease Basics</a></li>
-      <li><a href="lease-basics.html">protect deposit</a></li>
-      <li><a href="lease-basics.html">budgeting</a></li>
-      <li><a href="lease-basics.html">renters insurance</a></li>
+      <li><a href="lease-basics.html">Protect Deposit</a></li>
+      <li><a href="lease-basics.html">Budgeting</a></li>
+      <li><a href="lease-basics.html">Renters Insurance</a></li>
     </ul>
 
     <a href="../index.html" class="back-link">← Back to Home</a>
