--- a/rent-smart/lease-basics.html
+++ b/rent-smart/lease-basics.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Lease Basics | Nestwell</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../style.css">
+</head>
 
+<body>
+
+<header class="module-hero">
+  <div class="container">
+    <h1>Lease Basics</h1>
+    <p class="subtitle">
+      Understand your lease before you sign.
+    </p>
+  </div>
+</header>
+
+<main class="content">
+
+  <section class="info-card">
+    <h2>What Is a Lease?</h2>
+    <p>
+      A lease is a legally binding contract between you and your landlord.
+      It outlines your rights, responsibilities, payment terms, and rules.
+    </p>
+  </section>
+
+  <section class="info-card">
+    <h2>Key Things to Look For</h2>
+    <p>
+      • Rent amount and due date  
+      • Security deposit terms  
+      • Maintenance responsibilities  
+      • Early termination clauses  
+      • Renewal terms  
+    </p>
+  </section>
+
+  <section class="info-card">
+    <h2>Why This Matters</h2>
+    <p>
+      Understanding your lease protects your money, your credit,
+      and your housing stability.
+    </p>
+  </section>
+
+  <div class="back-home">
+    <a href="index.html" class="secondary-button">← Back to Stage 1</a>
+  </div>
+
+</main>
+
+<footer class="site-footer">
+  <p>© 2026 Nestwell — Learn. Prepare. Own.</p>
+</footer>
+
+</body>
+</html>
