--- a/rent-smart/lease-basics.html
+++ b/rent-smart/lease-basics.html
@@ -18,39 +18,53 @@
   </div>
 </header>
 
-<main class="content">
+<main class="module-layout">
 
-  <section class="info-card">
-    <h2>What Is a Lease?</h2>
-    <p>
-      A lease is a legally binding contract between you and your landlord.
-      It outlines your rights, responsibilities, payment terms, and rules.
-    </p>
-  </section>
+  <aside class="module-sidebar">
+    <h3>Stage 1 Modules</h3>
+    <ul>
+      <li><a href="lease-basics.html" class="active-link">Lease Basics</a></li>
+      <li><a href="protect-deposit.html">Protect Deposit</a></li>
+      <li><a href="budgeting.html">Budgeting</a></li>
+      <li><a href="renters-insurance.html">Renters Insurance</a></li>
+    </ul>
+  </aside>
 
-  <section class="info-card">
-    <h2>Key Things to Look For</h2>
-    <p>
-      • Rent amount and due date  
-      • Security deposit terms  
-      • Maintenance responsibilities  
-      • Early termination clauses  
-      • Renewal terms  
-    </p>
-  </section>
+  <div class="module-content">
 
-  <section class="info-card">
-    <h2>Why This Matters</h2>
-    <p>
-      Understanding your lease protects your money, your credit,
-      and your housing stability.
-    </p>
-  </section>
+    <section class="info-card">
+      <h2>What Is a Lease?</h2>
+      <p>
+        A lease is a legally binding contract between you and your landlord.
+        It outlines your rights, responsibilities, payment terms, and rules.
+      </p>
+    </section>
 
-  <div class="back-home">
-    <a href="index.html" class="secondary-button">← Back to Stage 1</a>
+    <section class="info-card">
+      <h2>Key Things to Look For</h2>
+      <p>
+        • Rent amount and due date  
+        • Security deposit terms  
+        • Maintenance responsibilities  
+        • Early termination clauses  
+        • Renewal terms  
+      </p>
+    </section>
+
+    <section class="info-card">
+      <h2>Why This Matters</h2>
+      <p>
+        Understanding your lease protects your money, your credit,
+        and your housing stability.
+      </p>
+    </section>
+
+    <div class="navigation-buttons">
+      <a href="index.html" class="secondary-button">← Back to Stage 1</a>
+      <a href="protect-deposit.html" class="cta-button">Next: Protect Deposit →</a>
+    </div>
+
   </div>
-    <a href="protect-deposit.html" class="cta-button">Next: Protect Deposit →</a>
 
 </main>
 
